# time-strolls

./: .gitignore  OFFLINE_CACHING_STRATEGY.md  Pipfile  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  config.yml  etl.py  main.py  pyproject.toml
backend/api/: database.py  db.py  local_tile_server.py  main.py  models.py
backend/api/auth/: api_key.py
backend/api/controller/: image.py  location.py  place.py  podcast.py  tour.py  track.py
backend/api/model/: image.py  location.py  place.py  podcast.py  tour.py  track.py
backend/api/view/: place.py
backend/config/: __init__.py  validate.py
backend/database/sql/: V001_001__create_schema.sql
backend/extract/: extract.py
backend/helpers/: cdn.py  fs.py  hash.py  image.py  slug.py
backend/migration/: V001_001__create_schema.sql  V001_002__create_tour_schema.sql  V001_002__create_track_schema.sql  V001_002__instert_test_data.sql
backend/notebooks/: affine-epsg3857.ipynb  iamges_from_topothek.ipynb  images_from_topothek.ipynb  sqlmodel.ipynb  tracks.ipynb  transformations.ipynb  upload_data.ipynb
backend/tests/: README.md  __init__.py  conftest.py  test_slug.py
backend/topothek/: __init__.py  crawl.py
backend/tour/: __init__.py
backend/transform/: __init__.py  coordinates.py  geotif.py  geotiff.py  ground_control.py  tiles.py
deployment/: Caddyfile  Caddyfile.local  Caddyfile.production  Makefile  api-config.yml  deploy_production.sh  docker-compose.local  docker-compose.override.yml  docker-compose.production  docker-compose.yml
frontend/: Dockerfile  Makefile  README.md  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  Audio.jsx  Images.jsx  Map.jsx  Menu.jsx  Track.jsx  api.js  icons.js  index.css  index.js  setupProxy.js  testLocations.js
frontend/src/Components/: Button.jsx  PlayButton.jsx
frontend/src/LocationInfo/: Audio.jsx  Images.jsx  LocationInfo.jsx
frontend/src/LocationMarkers/: LocationMarker.jsx  LocationMarkers.jsx
frontend/src/Tours/: Tour.jsx
frontend/src/Track/: Track.jsx  TrackControl.jsx  useTrack.js
frontend/src/Tracks/: TrackPath.jsx
notebooks/: affine-epsg3857.ipynb
