[project]
name = "timestrolls"
version = "0.0.0"
description = "Stroll in space and time."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3",
    "envyaml",
    "fastapi",
    "gunicorn",
    #"psycopg2",
    "psycopg2-binary",
    "pydantic",
    "sqlmodel",
    "swak",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "jupyter",
    "folium",
    # zed
    "cst-lsp",
    # Geo Stuff
    "titiler.core",
    "morecantile",
    "rasterio",
    "rio-tiler",
    "pyproj",
    # Crawling
    "selenium",
    "webdriver-manager",
    "tenacity",
    # Image
    "opencv-python",
]
