[project]
name = "timestrolls"
version = "0.0.0"
description = "Stroll in space and time."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "boto3",
    "envyaml",
    "fastapi",
    "gunicorn",
    # for uploads
    "python-multipart",
    "psycopg2-binary",
    "pydantic",
    "sqlmodel",
    "swak",
    "uvicorn",
    "beautifulsoup4",
    "requests",
    "gpxpy>=1.6.2",
    "shapely>=2.1.2",
    "geoalchemy2>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "jupyter",
    "folium",
    "psycopg2",
    # zed
    "cst-lsp",
    # Geo Stuff
    "titiler.core",
    "morecantile",
    "rasterio",
    "rio-tiler",
    "pyproj",
    # Crawling
    "webdriver-manager",
    "tenacity",
    # Image
    "opencv-python",
]
